aws-deployment/georgia-deployment-service-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: georgia-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: georgia-app
  name: deployment-georgia-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-georgia-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-georgia-app
    spec:
      containers:
      - image: PLEASE_REPLACE_THIS
        imagePullPolicy: Always
        name: app-georgia-app
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: georgia-app
  name: service-georgia-app
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-georgia-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: georgia-app
  name: ingress-georgia-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-georgia-app
              port:
                number: 80
